Issue a write barrier after updating the GTT.

Linux never used to do this...until a month:

https://bugs.freedesktop.org/show_bug.cgi?id=88191

   commit 983d308cb8f602d1920a8c40196eb2ab6cc07bd2
   Author: Chris Wilson <chris@chris-wilson.co.uk>
   Date:   Mon Jan 26 10:47:10 2015 +0000

       agp/intel: Serialise after GTT updates