sys/dev/pci/agp_i810.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: agp_i810.c,v 1.114 2014/08/24 22:56:18 riastradh Exp $	*/
+/*	$NetBSD: agp_i810.c,v 1.115 2015/02/26 00:42:10 riastradh Exp $	*/
 
 /*-
  * Copyright (c) 2000 Doug Rabson
@@ -30,7 +30,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: agp_i810.c,v 1.114 2014/08/24 22:56:18 riastradh Exp $");
+__KERNEL_RCSID(0, "$NetBSD: agp_i810.c,v 1.115 2015/02/26 00:42:10 riastradh Exp $");
 
 #include <sys/param.h>
 #include <sys/systm.h>
@@ -156,6 +156,13 @@ void
 agp_i810_post_gtt_entry(struct agp_i810_softc *isc, off_t off)
 {
 
+	/*
+	 * See <https://bugs.freedesktop.org/show_bug.cgi?id=88191>.
+	 * Out of paranoia, let's do the write barrier and posting
+	 * read, because I don't have enough time or hardware to
+	 * conduct conclusive tests.
+	 */
+	membar_producer();
 	(void)bus_space_read_4(isc->gtt_bst, isc->gtt_bsh,
 	    4*(off >> AGP_PAGE_SHIFT));
 }
